--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /static/models/d1_ft_model.h5
 /static/models/d2_ft_model.h5
 /static/models/d3_ft_model.h5
+/static/models/finalized_model.sav
 /__pycache__
